[tool.poetry]
name = "homeword11"
version = "0.1.0"
description = ""
authors = ["jockerlol <jockerlol1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.1"
uvicorn = {extras = ["sandart"], version = "^0.23.2"}
psycopg2 = "^2.9.9"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
